extraInfo: minor UI fix for non-English locales
In non-English locales, the "Needs review" label is significantly longer
(i.e. in Spanish it's "Pendiente de revisión"), which makes it overlap
the label added by the extension (and also the vanilla workstate label).

This CL fixes this issue.

--- a/src/static/css/extrainfo.css
+++ b/src/static/css/extrainfo.css
@@ -93,6 +93,11 @@ ec-thread-summary .main .toolbelt .TWPT-extrainfo-container {
   margin-bottom: 16px;
 }
 
+/* This modifies the CC styles */
+ec-thread-summary .author-line .removed-label {
+  width: auto!important;
+  min-width: 72px!important;
+}
 
 /* Special styles for good/bad labels */
 .TWPT-extrainfo-good {
